# APP-COMM-atp

./: CHANGES  INSTALL  Makefile.in  Manifest  README.md  aclocal.m4  ansi.c  ansi.h  atpmain.c  atptypes.h  chosetag.c  configure  configure.in  display.c  globals.h  makefile.dos  makefile.os2  makefile.tcc  makemail.c  makemail.h  mkindex.c  purge.c  qlib.c  qlib.h  rdconfig.c  read.c  reader.h  readlib.c  readlib.h  reply.c  system.c  system.h  text.c
docs/: FILE_ID.DIZ  LINUX.TIP  MANIFEST  Makefile.in  README  atp.1  atp.ps  atp.txt  atpdiag.1  atprc  rot13.1  taglines.atp
editline/: Makefile.in  complete.c  configure.in  editline.c  editline.h  edlproto.h  edpublic.h  makefile.dos  makefile.os2  msdos.h  os9.h  stub.tcc  sysdos.c  sysos2.c  sysos9.c  sysunix.c  testit.c  unix.h
editline/etc/: bormake.w32  makefile.NeXT  makefile.bcc  makefile.dj  makefile.msc  makefile.w32
etc/: README  bormake.w32  makefile.NeXT  makefile.bcc  makefile.dj  makefile.msc  makefile.w32
utils/: Makefile.in  README  ansi2knr.c  atpdiag.in  edlin.in  funcfind  makefile.dos  makefile.os2  malloc_.h  rot13.c  stdio_.h  string_.h
utils/batch/: CDIR.IN  MAKEDIAG.IN  RMV.IN  TSTMYMAK.IN
utils/etc/: makefile.dj
