AC_INIT(chosetag.c)
AC_PROG_CC
AC_MINIX
AC_ISC_POSIX
AC_PROG_GCC_TRADITIONAL
atp_C_PROTOTYPES
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_AWK
AC_CHECK_PROG(LINT,lint,lint -bhu,lclint +boolint)
AC_CHECK_PROG(STRIP,strip,strip,"ls -l")
AC_CHECK_PROG(A_TBL,gtbl,gtbl,tbl)
AC_CHECK_PROG(PAGER,less,less,more)
AC_CHECK_PROG(PS_METHOD,dvips,ps_dvips,ps_groff)
atp_PROG_COL_X
atp_PROG_NROFF
AC_C_CONST
atp_C_VOLATILE
AC_TYPE_SIZE_T
AC_TYPE_MODE_T
AC_TYPE_PID_T
AC_TYPE_SIGNAL
AC_HEADER_DIRENT
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(unistd.h utime.h)
dnl
AC_CHECK_HEADER(termios.h,AC_DEFINE(HAVE_TERMIOS_H),
[AC_CHECK_HEADER(termio.h,AC_DEFINE(HAVE_TERMIO_H),AC_CHECK_HEADERS(sgtty.h))])
dnl
AC_CHECK_FUNC(strncasecmp,AC_DEFINE(HAVE_STRNCASECMP),AC_CHECK_FUNCS(strnicmp))
AC_CHECK_FUNCS(getcwd perror sigaction strdup strstr tmpnam tcgetattr cfgetospeed) 
AC_CHECK_LIB(memdb,main,[DBLIB="-lmemdb" DBFLG="-DMEMDEBUG"],[DBLIB="-ldbmalloc" DBFLG="-DDBMALLOC"])
dnl
AC_CHECK_LIB(termcap,main,AC_CHECK_HEADERS(termcap.h termlib.h) AC_DEFINE(HAVE_LIBTERMCAP) LIBS="-ltermcap",
 AC_CHECK_LIB(termlib,main,AC_CHECK_HEADERS(termcap.h termlib.h) AC_DEFINE(HAVE_TERMLIB) LIBS="-ltermlib")) 
dnl
AC_CHECK_PROG(UNAME_S,uname,`uname -s`,unix)
AC_PATH_PROG(PERL,perl,/usr/bin/perl)
dnl
dnl The magic "NOBANG" numbers below tell how many lines to delete
dnl from the top of the file utils/atpdiag.in when making atpdiag
dnl
atp_SYS_INTERPRETER
if test "$ac_cv_sys_interpreter" = yes ; then
  NOBANG=7
else
  NOBANG=5
fi
atp_PROG_MKDIR_P

##########################
# get owner of man pages #
##########################
AC_CACHE_CHECK(for man page owner,atp_cv_group_man_own,
  atp_GROUP_MAN_OWN
)

# get group for man pages
AC_CACHE_CHECK(for man page group,atp_cv_group_man_grp,

 AC_REQUIRE([atp_GROUP_MAN_TPATH])

atp_t_grp=`ls -l $atp_t_path* | $ac_cv_prog_AWK '{ print $[]4 }'`

changequote(<<,>>)dnl
if echo $atp_t_grp | grep -e '[A-Za-z]' >/dev/null 2>&1 ; then
changequote([,])dnl
  :
else
  atp_t_grp=`ls -lg $atp_t_path* | $ac_cv_prog_AWK '{ print $[]4 }'`
fi

atp_cv_group_man_grp=$atp_t_grp
)

# clean-up and set output variables for man page owner and group
rm -f ./t_tmp_t.test
man_own=$atp_cv_group_man_own
AC_SUBST(man_own)
man_grp=$atp_cv_group_man_grp
AC_SUBST(man_grp)

###############################
# get bin ownership and group #
###############################
AC_CACHE_CHECK(for bin owner,atp_cv_group_bin_own,
 atp_GROUP_BIN_OWN
)
bin_own=$atp_cv_group_bin_own
AC_SUBST(bin_own)
######################
# get group for bins #
######################
AC_CACHE_CHECK(for bin group,atp_cv_group_bin_grp,
>t_tmp_b.test
atp_b_grp=`ls -l t_tmp_b.test | $ac_cv_prog_AWK '{ print $[]4 }'`

changequote(<<,>>)dnl
if echo $atp_b_grp | grep -e '[A-Za-z]' >/dev/null 2>&1 ; then
changequote([,])dnl
  :
else
  atp_b_grp=`ls -lg t_tmp_b.test | $ac_cv_prog_AWK '{ print $[]4 }'`
fi

atp_cv_group_bin_grp=$atp_b_grp
)
bin_grp=$atp_cv_group_bin_grp
AC_SUBST(bin_grp)
rm -f ./t_tmp_b.test

##################

ATPVER=1.50
ATPHOME=${ATP-$HOME/atpqwk}
AR=${AR-ar}  
AC_SUBST(AR)
AC_SUBST(ATPVER)
AC_SUBST(ATPHOME)
AC_SUBST(NOBANG)
AC_SUBST(DBLIB)
AC_SUBST(DBFLG)
AC_OUTPUT(Makefile editline/Makefile utils/Makefile docs/Makefile)

echo "Please review Makefile for installation permissions and ownership."

