AC_INIT(editline.h)
AC_PROG_CC
AC_MINIX
AC_ISC_POSIX
AC_PROG_GCC_TRADITIONAL
atp_C_PROTOTYPES
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_MAKE_SET
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_SIGNAL
AC_CHECK_LIB(termcap, main)
if test "$ac_cv_lib_termcap" != 'yes' ; then
  AC_CHECK_LIB(termlib, main)
fi
AC_HEADER_DIRENT
AC_CHECK_LIB(memdb,main,[DBLIB="-lmemdb" DBFLG="-DMEMDEBUG"],[DBLIB="-ldbmalloc" DBFLG="-DDBMALLOC"])
AC_CHECK_HEADERS(termios.h)
if test "$ac_cv_header_termios_h" != 'yes'  ; then
  AC_CHECK_HEADERS(termio.h)
  if test "$ac_cv_header_termio_h" != 'yes'  ; then
    AC_CHECK_HEADERS(sgtty.h)
  fi
fi 
AC_CHECK_HEADERS(unistd.h termcap.h)
AC_CHECK_FUNCS(perror strdup tcgetattr cfgetospeed) 
AC_SUBST(DBFLG)
AC_SUBST(DBLIB)
AC_OUTPUT(Makefile)
